[package]
name = "bridge"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[features]
default = []
zenoh = ["dep:zenoh"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
jseries = { path = "../../crates/jseries" }
e2ee = { path = "../../crates/e2ee" }
zenoh = { workspace = true, optional = true }
hex = { workspace = true }
