[package]
name = "publisher"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[features]
default = ["zenoh"]
zenoh = ["dep:zenoh"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
zenoh = { workspace = true, optional = true }