[package]
name = "e2ee"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[features]
default = []
rustls = ["dep:rustls"]
pqc = []

[dependencies]
aes-gcm = { workspace = true }
rand_core = { workspace = true }
rustls = { workspace = true, optional = true }
thiserror = { workspace = true }
blake3 = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
