[package]
name = "jseries"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
deku = { workspace = true, features = ["alloc"] }

[dev-dependencies]
proptest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints.rust]
# Allow cfg(kani) so normal builds don’t warn about the proof harness
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
