[package]
name = "jseries"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[dependencies]
deku = { workspace = true, features = ["alloc"] }

[dev-dependencies]
proptest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
